[package]
name = "wallet-copy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
hyperliquid_rust_sdk = "0.6"
ethers = "2.0"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

